test/parser.d/invalid/match3.surc.bad
; match expressions cannot be part of other expressions
match3(dox: Integer): Integer = 1 + match 4
    7 -> 7
